# device_vendor_info

./: .gitignore  README.md  pubspec.yaml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: autogen.yml  bundle.yml  interface.yml  interface_test.yml  unit_test.yml
bundle/: .pubignore  CHANGELOG.md  README.md  pubspec.yaml
bundle/example/: README.md  pubspec.yaml
bundle/lib/: device_vendor_info.dart  instance.dart  testing.dart
bundle/lib/src/: global.dart  (+3 more)
bundle/test/: device_vendor_info_test.dart
example/: README.md  pubspec.yaml
example/lib/: main.dart
interface/: .pubignore  CHANGELOG.md  README.md  build.yaml  pubspec.yaml
interface/lib/: collections.dart  definitions.dart  interface.dart  mock.dart  release.dart
interface/test/: dictionary_test.dart
unix/: CHANGELOG.md  README.md  pubspec.yaml
unix/lib/: device_vendor_info_unix.dart
vmchecker/: .gitignore  .metadata  CHANGELOG.md  CMakeLists.txt  README.md  analysis_options.yaml  ffigen.yaml  pubspec.yaml  vmchecker.c  vmchecker.def  vmchecker.h
vmchecker/hook/: build.dart
vmchecker/lib/: device_vendor_info_vmchecker.dart  device_vendor_info_vmchecker_bindings_generated.dart  vmchecker.dart  vmchecker_bindings_generated.dart
vmchecker/lib/src/: vm_checker.g.dart
vmchecker/linux/: CMakeLists.txt
vmchecker/macos/: device_vendor_info_vmchecker.podspec  vmchecker.podspec
vmchecker/macos/Classes/: device_vendor_info_vmchecker.c  vmchecker.c
vmchecker/src/: CMakeLists.txt  device_vendor_info_vmchecker.c  device_vendor_info_vmchecker.h  vmchecker.c  vmchecker.h
vmchecker/tool/: ffigen.dart
vmchecker/windows/: CMakeLists.txt
windows/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
(+44 files in other folders)
